# crucible

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONVENTIONS.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
crucible/: __init__.py  cli.py  env.py  export.py  registry.py  reward.py  rollout.py  sandbox.py  trajectory.py
crucible/envs/: __init__.py  code.py  command.py  guess.py  http.py  sql.py  terminal.py
crucible/integrations/: __init__.py  trl.py  verifiers.py
docs/: ARCHITECTURE.md  BACKLOG.md  VISION.md
examples/: __init__.py  agents.py  demo.py  learn.py  train_grpo.py  train_grpo_suite.py  train_xmodal.py
examples/results/: README.md  grpo_sql_rewards.json  grpo_suite.json  plot_grpo.py  plot_grpo_suite.py  plot_xmodal.py  xmodal.json
space/: README.md  app.py  requirements.txt
tests/: test_cli.py  test_code_env.py  test_command_env.py  test_core.py  test_docker_sandbox.py  test_envs.py  test_export.py  test_http_env.py  test_learning.py  test_persistence.py  test_pytest_repo.py  test_registry.py  test_reward.py  test_sandbox.py  test_terminal_env.py  test_train_grpo.py  test_train_grpo_suite.py  test_train_xmodal.py  test_trl_integration.py  test_verifiers_integration.py
