[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crucible-rl"
version = "0.1.0"
description = "Turn any real software into a trainable, gradable, replayable RL environment for AI agents."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Glenn Nadeau" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]

[tool.hatch.build.targets.wheel]
packages = ["crucible"]

[tool.pytest.ini_options]
addopts = "--cov=crucible --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]
pythonpath = ["."]
